...

				</LinearLayout>

			</LinearLayout>

			<LinearLayout
				android:id="@+id/username_layout"
				android:visibility="visible"
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<TextView
...
						android:layout_height="wrap_content"
						android:visibility="invisible"/>

				</LinearLayout>

				<LinearLayout
					android:id="@+id/password_layout"
					android:visibility="visible"
					android:orientation="vertical"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<LinearLayout
...

				</LinearLayout>

			</LinearLayout>

			<CheckBox
				android:id="@+id/use_username"
				android:visibility="visible"
				android:paddingLeft="5dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
                android:button="@drawable/checkbox"
				android:text="@string/use_username_instead_or_phone_number"
...
				android:layout_height="40dp"
				android:paddingLeft="10dp"
				android:paddingRight="10dp"
				android:layout_marginTop="20dp"/>

			<TextView
				android:id="@+id/assistant_skip"
				android:visibility="visible"
				android:text="@string/maybe_later"
				android:textColor="?attr/primaryTextColor"
				android:textSize="18sp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
...
