...
    <!--android:id="@+id/status_bar"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="40dp"-->
    <!--android:layout_alignParentTop="true">-->

    <!--<ImageView-->
    <!--android:id="@+id/side_menu_button"-->
    <!--android:src="@drawable/menu_burger"-->
    <!--android:contentDescription="@string/content_description_menu"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:padding="10dp"-->
    <!--android:layout_centerInParent="true"-->
...
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4" />

        <ImageView
            android:id="@+id/edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@drawable/toolbar_button"
            android:contentDescription="@string/content_description_edit_list"
            android:padding="15dp"
...
